# file_test_runner

./: Cargo.toml  README.md  deno.json  rust-toolchain.toml
.github/workflows/: ci.yml
src/: collection.rs  lib.rs  parallelism.rs  reporter.rs  runner.rs  semaphore.rs
src/collection/: mod.rs
src/collection/strategies/: file_test_mapper.rs  helpers.rs  mod.rs  test_per_directory.rs  test_per_file.rs
src/utils/: mod.rs  notify.rs  semaphore.rs
