[package]
name = "file_test_runner"
version = "0.7.2"
edition = "2021"
description = "File-based test runner for running tests found in files."
authors = ["the Deno authors"]
license = "MIT"
repository = "https://github.com/denoland/file_test_runner"

[dependencies]
anyhow = "1.0.82"
crossbeam-channel = "0.5.12"
deno_terminal = "0.1.1"
parking_lot = "0.12.1"
regex = "1.10.4"
thiserror = "1.0.58"
